--- a/common/build.gradle
+++ b/common/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     api 'com.google.code.gson:gson:2.8.6'
     api 'androidx.navigation:navigation-fragment:2.2.1'
     api 'com.google.android.material:material:1.1.0'
+    api 'com.blankj:utilcodex:1.26.0'
+    implementation 'org.jetbrains:annotations:15.0'
 
 
 }
