--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zty.common" >
+    package="com.zty.common"
+
+    >
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
