--- a/common_ktx/build.gradle
+++ b/common_ktx/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -21,39 +22,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
-    }
-    compileOptions {
-
-        sourceCompatibility JavaVersion.VERSION_1_8
-
-        targetCompatibility JavaVersion.VERSION_1_8
-
-    }
 
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    api 'io.reactivex.rxjava3:rxjava:3.0.0'
-    api 'io.reactivex.rxjava3:rxandroid:3.0.0'
-
-    api 'com.squareup.retrofit2:retrofit:2.7.1'
-    api "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC4"
-
-    api 'com.google.code.gson:gson:2.8.6'
-    api 'androidx.navigation:navigation-fragment:2.2.1'
-    api 'com.google.android.material:material:1.1.0'
-    api 'com.blankj:utilcodex:1.26.0'
-    implementation 'org.jetbrains:annotations:15.0'
-
-
+    implementation project(path: ':common')
 
 }
