--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".global.App"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.zty.archdemo.ui.main.MainHostActivity">
+
+        </activity>
+        <activity android:name=".ui.main.another.AnotherActivity" />
+        <activity android:name=".ui.navdemo.NavMainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.another.AnotherActivity" />
     </application>
 
 </manifest>
