--- a/common/build.gradle
+++ b/common/build.gradle
@@ -53,7 +53,6 @@ dependencies {
     api 'com.google.android.material:material:1.1.0'
     api 'com.blankj:utilcodex:1.26.0'
     implementation 'org.jetbrains:annotations:15.0'
-
-
+    api 'com.tencent:mmkv-static:1.1.1'
 
 }
